--- a/happymothersday.html
+++ b/happymothersday.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html> 
-
 <body style="background: linear-gradient(135deg, #ff8099 25%, transparent 25%) -50px 0, linear-gradient(225deg, #ff8099 25%, transparent 25%) -50px 0, linear-gradient(315deg, #ff8099 25%, transparent 25%), linear-gradient(45deg, #ff8099 25%, transparent 25%); background-size: 100px 100px; background-color:#ff5080";></body>
-
 <style>
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
 img {vertical-align: middle;}
-
 /* Slideshow container */
 .slideshow-container {
   max-width: 300px;
@@ -15,7 +12,6 @@ img {vertical-align: middle;}
   position: relative;
   margin: auto;
 }
-
 /* Caption text */
 .text {
   color: #f2f2f2;
@@ -26,7 +22,6 @@ img {vertical-align: middle;}
   width: 100%;
   text-align: center;
 }
-
 /* Number text (1/8 etc) */
 .numbertext {
   color: #f2f2f2;
@@ -35,7 +30,6 @@ img {vertical-align: middle;}
   position: absolute;
   top: 0;
 }
-
 /* The dots/bullets/indicators */
 .dot {
   height: 15px;
@@ -46,37 +40,29 @@ img {vertical-align: middle;}
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-
 .active {
   background-color: #717171;
 }
-
 /* Fading animation */
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
 }
-
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
+@media only screen and (max-width: 300px) and (max-height: 300px) {
   .text {font-size: 11px}
 }
 </style>
-
-
 <div class="slideshow-container">
-
 <div class="mySlides fade">
   <div class="numbertext">1 / 8</div>
   <img src="https://i.ibb.co/B2KdyTWm/FB-IMG-1746942719715.jpg" alt="FB-IMG-1746942719715" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
-
 <div class="mySlides fade">
   <div class="numbertext">2 / 8</div>
   <img src="https://i.ibb.co/zWCghNGT/FB-IMG-1746942873839.jpg" alt="FB-IMG-1746942873839" border="2"; width=300px; height:300px;>
@@ -88,48 +74,33 @@ img {vertical-align: middle;}
   <img src="https://i.ibb.co/6cLPX6xR/FB-IMG-1746942710791.jpg" alt="FB-IMG-1746942710791" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
-
-
 <div class="mySlides fade">
   <div class="numbertext">4 / 8</div>
   <img src="https://i.ibb.co/Xr9wqT0S/FB-IMG-1746942748717.jpg" alt="FB-IMG-1746942748717" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
-
-
 <div class="mySlides fade">
   <div class="numbertext">5 / 8</div>
   <img src="https://i.ibb.co/6R5G2yYW/FB-IMG-1746943291822.jpg" alt="FB-IMG-1746943291822" border="2"; width=300px; height:200px;>
   <div class="text"></div>
 </div>
-
-
-
 <div class="mySlides fade">
   <div class="numbertext">6 / 8</div>
   <img src="https://i.ibb.co/p6bsKrZv/FB-IMG-1746943007290.jpg" alt="FB-IMG-1746943007290" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
-
-
 <div class="mySlides fade">
   <div class="numbertext">7 / 8</div>
   <img src="https://i.ibb.co/yngggpNz/FB-IMG-1746942996618.jpg" alt="FB-IMG-1746942996618" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
-
-
 <div class="mySlides fade">
   <div class="numbertext">8 / 8</div>
   <img src="https://i.ibb.co/Z6jQ3CNg/FB-IMG-1746942646629.jpg" alt="FB-IMG-1746942646629" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
-
-
-
 </div>
 <br>
-
 <div style="text-align:center">
   <span class="dot"></span> 
   <span class="dot"></span> 
@@ -140,11 +111,9 @@ img {vertical-align: middle;}
 <span class="dot"></span> 
   <span class="dot"></span> 
 </div>
-
 <script>
 let slideIndex = 0;
 showSlides();
-
 function showSlides() {
   let i;
   let slides = document.getElementsByClassName("mySlides");
@@ -162,26 +131,14 @@ function showSlides() {
   setTimeout(showSlides, 6000); //
 }
 </script>
-
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 <body>
-
-
 <br></br>
-
-<b><center><h1>Happy Mother's Day</h1><font-family:serif; font-size:50px; color:#000000><center></b><br></br>
-
+<b><center><h1>Happy Mother's Day Mom</h1><font-family:serif; font-size:50px; color:#000000><center></b><br></br>
 <audio src="The Intruders - I'll Always Love My Mama (Part 1) (Official Audio).mp3" autoplay muted controls></audio>
-
-
 </body>
 </html>
-
-
-
 </body>
 </html> 
 
