--- a/happymothersday.html
+++ b/happymothersday.html
@@ -81,7 +81,7 @@ img {vertical-align: middle;}
 </div>
 <div class="mySlides fade">
   <div class="numbertext">5 / 8</div>
-  <img src="https://i.ibb.co/6R5G2yYW/FB-IMG-1746943291822.jpg" alt="FB-IMG-1746943291822" border="2"; width=300px; height:200px;>
+  <img src="https://i.ibb.co/v4jpgr7G/FB-IMG-1746943291822-cropped.jpg" alt="FB-IMG-1746943291822-cropped" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
@@ -128,14 +128,14 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 6000); //
+  setTimeout(showSlides, 3000); //
 }
 </script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <br></br>
-<b><center><h1>Happy Mother's Day Mom</h1><font-family:serif; font-size:50px; color:#000000><center></b><br></br>
+<b><center><h1>Happy Mother's Day Mom</h1><font-family:verdana; font-size:60px; color:#000000><center></b><br></br>
 <audio src="The Intruders - I'll Always Love My Mama (Part 1) (Official Audio).mp3" autoplay muted controls></audio>
 </body>
 </html>
