--- a/happymothersday.html
+++ b/happymothersday.html
@@ -14,7 +14,7 @@ img {vertical-align: middle;}
 }
 /* Caption text */
 .text {
-  color: #f2f2f2;
+  color: #ff6060;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -22,7 +22,7 @@ img {vertical-align: middle;}
   width: 100%;
   text-align: center;
 }
-/* Number text (1/8 etc) */
+/* Number text (1/9 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -59,42 +59,46 @@ img {vertical-align: middle;}
 </style>
 <div class="slideshow-container">
 <div class="mySlides fade">
-  <div class="numbertext">1 / 8</div>
+  <div class="numbertext">1 / 9</div>
   <img src="https://i.ibb.co/B2KdyTWm/FB-IMG-1746942719715.jpg" alt="FB-IMG-1746942719715" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">2 / 8</div>
+  <div class="numbertext">2 / 9</div>
   <img src="https://i.ibb.co/zWCghNGT/FB-IMG-1746942873839.jpg" alt="FB-IMG-1746942873839" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 8</div>
+  <div class="numbertext">3 / 9</div>
   <img src="https://i.ibb.co/6cLPX6xR/FB-IMG-1746942710791.jpg" alt="FB-IMG-1746942710791" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">4 / 8</div>
+  <div class="numbertext">4 / 9</div>
   <img src="https://i.ibb.co/Xr9wqT0S/FB-IMG-1746942748717.jpg" alt="FB-IMG-1746942748717" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">5 / 8</div>
+  <div class="numbertext">5 / 9</div>
   <img src="https://i.ibb.co/v4jpgr7G/FB-IMG-1746943291822-cropped.jpg" alt="FB-IMG-1746943291822-cropped" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">6 / 8</div>
+  <div class="numbertext">6 / 9</div>
   <img src="https://i.ibb.co/p6bsKrZv/FB-IMG-1746943007290.jpg" alt="FB-IMG-1746943007290" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">7 / 8</div>
+  <div class="numbertext">7 / 9</div>
   <img src="https://i.ibb.co/yngggpNz/FB-IMG-1746942996618.jpg" alt="FB-IMG-1746942996618" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
+  <div class="numbertext">8 / 9</div>
+  <img src="https://i.ibb.co/Z6jQ3CNg/FB-IMG-1746942646629.jpg" alt="FB-IMG-1746942646629" border="2"; width=300px; height:300px;>
+  <div class="text"></div>
+  <div class="mySlides fade">
   <div class="numbertext">8 / 8</div>
   <img src="https://i.ibb.co/Z6jQ3CNg/FB-IMG-1746942646629.jpg" alt="FB-IMG-1746942646629" border="2"; width=300px; height:300px;>
   <div class="text"></div>
@@ -135,7 +139,7 @@ function showSlides() {
 </head>
 <body>
 <br></br>
-<b><center><h1>Happy Mother's Day Mom</h1><font-family:verdana; font-size:60px; color:#000000><center></b><br></br>
+<span style='font-size:100px;'>&#129505;</span><b><center><h1>Happy Mother's Day Mom</h1><font-family:verdana; color:#000000></font-family:verdana></center></b><br></br><span style='font-size:100px;'>&#129505;</span>
 <audio src="The Intruders - I'll Always Love My Mama (Part 1) (Official Audio).mp3" autoplay muted controls></audio>
 </body>
 </html>
