--- a/happymothersday.html
+++ b/happymothersday.html
@@ -139,7 +139,7 @@ function showSlides() {
 </head>
 <body>
 <br></br>
-<span style='font-size:100px;'>&#129505;</span><b><center><h1>Happy Mother's Day Mom</h1><font-family:verdana; color:#000000></font-family:verdana></center></b><br></br><span style='font-size:100px;'>&#129505;</span>
+<span style='font-size:50px;'>&#129505;</span><b><center><h1>Happy Mother's Day Mom</h1><font-family:verdana; font-size:50px; color:#000000></center></b><span style='font-size:50px;'>&#129505;</span>
 <audio src="The Intruders - I'll Always Love My Mama (Part 1) (Official Audio).mp3" autoplay muted controls></audio>
 </body>
 </html>
