--- a/happymothersday.html
+++ b/happymothersday.html
@@ -139,7 +139,7 @@ function showSlides() {
 </head>
 <body>
 <br></br>
-<b><center><h1>Happy Mother's Day Mom</h1><font-family:verdana; font-size:50px; color:#000000; span style='font-size:50px;'>&#129505;></center></b><span style='font-size:50px;'>&#129505;</span>
+<b><center><h1 style= 'font-size:50px;'>&129505;>Happy Mother's Day Mom</h1 style= 'font-size:50px;'>&129505;><font-family:verdana; font-size:50px; color:#000000>
 
 <span style='font-size:100px;'>&#128149;</span>  
 <audio src="The Intruders - I'll Always Love My Mama (Part 1) (Official Audio).mp3" autoplay muted controls></audio>
