--- a/happymothersday.html
+++ b/happymothersday.html
@@ -35,7 +35,7 @@ img {vertical-align: middle;}
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: #ff7060;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
