--- a/happymothersday.html
+++ b/happymothersday.html
@@ -88,11 +88,11 @@ img {vertical-align: middle;}
 </div>
 <div class="mySlides fade">
   <div class="numbertext">8 / 9</div>
-  <img src="https://i.ibb.co/Z6jQ3CNg/FB-IMG-1746942646629.jpg" alt="FB-IMG-1746942646629" border="2"; width=300px; height:300px;>
+  <img src="https://i.ibb.co/Hfv5VPFD/FB-IMG-1746943268866.jpg" alt="FB-IMG-1746943268866" border="2"; width=300px; height:300px;>
   <div class="text"></div>
   <div class="mySlides fade">
-  <div class="numbertext">8 / 8</div>
-  <img src="https://i.ibb.co/Z6jQ3CNg/FB-IMG-1746942646629.jpg" alt="FB-IMG-1746942646629" border="2"; width=300px; height:300px;>
+  <div class="numbertext">9 / 9</div>
+  <img src="https://i.ibb.co/dJJyBT6g/463601992-10212270326710410-1251689602173422209-n.jpg" alt="463601992-10212270326710410-1251689602173422209-n" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 </div>
