--- a/happymothersday.html
+++ b/happymothersday.html
@@ -12,6 +12,16 @@ img {vertical-align: middle;}
   position: relative;
   margin: auto;
   }
+/* Caption text */
+.text {
+  color: #ff6060;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
 /* The dots/bullets/indicators */
 .dot {
   height: 15px;
@@ -41,18 +51,15 @@ img {vertical-align: middle;}
 </style>
 <div class="slideshow-container">
 <div class="mySlides fade">
-  <div class="numbertext">1 / 9</div>
   <img src="https://i.ibb.co/B2KdyTWm/FB-IMG-1746942719715.jpg" alt="FB-IMG-1746942719715" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">2 / 9</div>
   <img src="https://i.ibb.co/zWCghNGT/FB-IMG-1746942873839.jpg" alt="FB-IMG-1746942873839" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 9</div>
   <img src="https://i.ibb.co/6cLPX6xR/FB-IMG-1746942710791.jpg" alt="FB-IMG-1746942710791" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
@@ -62,26 +69,21 @@ img {vertical-align: middle;}
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">5 / 9</div>
   <img src="https://i.ibb.co/v4jpgr7G/FB-IMG-1746943291822-cropped.jpg" alt="FB-IMG-1746943291822-cropped" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">6 / 9</div>
   <img src="https://i.ibb.co/p6bsKrZv/FB-IMG-1746943007290.jpg" alt="FB-IMG-1746943007290" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">7 / 9</div>
   <img src="https://i.ibb.co/yngggpNz/FB-IMG-1746942996618.jpg" alt="FB-IMG-1746942996618" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">8 / 9</div>
   <img src="https://i.ibb.co/Hfv5VPFD/FB-IMG-1746943268866.jpg" alt="FB-IMG-1746943268866" border="2"; width=300px; height:300px;>
   <div class="text"></div>
-  <div class="mySlides fade">
-  <div class="numbertext">9 / 9</div>
+<div class="mySlides fade">
   <img src="https://i.ibb.co/dJJyBT6g/463601992-10212270326710410-1251689602173422209-n.jpg" alt="463601992-10212270326710410-1251689602173422209-n" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
