--- a/happymothersday.html
+++ b/happymothersday.html
@@ -2,7 +2,7 @@
 <body style="background: linear-gradient(135deg, #ff8099 25%, transparent 25%) -50px 0, linear-gradient(225deg, #ff8099 25%, transparent 25%) -50px 0, linear-gradient(315deg, #ff8099 25%, transparent 25%), linear-gradient(45deg, #ff8099 25%, transparent 25%); background-size: 100px 100px; background-color:#ff5080";></body>
 <style>
 * {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
+body {font-family: Verdana;}
 .mySlides {display: none;}
 img {vertical-align: middle;}
 /* Slideshow container */
