--- a/happymothersday.html
+++ b/happymothersday.html
@@ -58,7 +58,6 @@ img {vertical-align: middle;}
   <img src="https://i.ibb.co/zWCghNGT/FB-IMG-1746942873839.jpg" alt="FB-IMG-1746942873839" border="2"; width=300px; height:300px;>
   <div class="text"></div>
 </div>
-
 <div class="mySlides fade">
   <img src="https://i.ibb.co/6cLPX6xR/FB-IMG-1746942710791.jpg" alt="FB-IMG-1746942710791" border="2"; width=300px; height:300px;>
   <div class="text"></div>
@@ -123,12 +122,9 @@ function showSlides() {
 </head>
 <body>
 <br></br>
-<b><center><h1>Happy Mother's Day Mom</h1><font-family:verdana; font-size:50px; color:#000000>
-
-<span style='font-size:100px;'>&#128149;</span>  
+<b><center><span style='font-size:30px;'>1289505;</span><h1>Happy Mother's Day Mom</h1><font-family:verdana; font-size:50px; color:#000000><span style='font-size:30px;'>1289505;</span></center></b>
 <audio src="The Intruders - I'll Always Love My Mama (Part 1) (Official Audio).mp3" autoplay muted controls></audio>
 </body>
 </html>
 </body>
 </html> 
-
