--- a/happymothersday.html
+++ b/happymothersday.html
@@ -122,7 +122,15 @@ function showSlides() {
 </head>
 <body>
 <br></br>
-<b><center><span style='font-size:30px;'>1289505;</span><h1>Happy Mother's Day Mom</h1><font-family:verdana; font-size:50px; color:#000000><span style='font-size:30px;'>1289505;</span></center></b>
+<b>
+<center>
+<span style='font-size:30px;'>1289505;</span>
+<span style='font-size:30px;'>&#128149;</span>  
+<h1>Happy Mother's Day Mom</h1><font-family:verdana; font-size:50px; color:#000000>
+<span style='font-size:30px;'>1289505;</span>
+<span style='font-size:30px;'>&#128149;</span>
+</center>
+</b>
 <audio src="The Intruders - I'll Always Love My Mama (Part 1) (Official Audio).mp3" autoplay muted controls></audio>
 </body>
 </html>
