--- a/happymothersday.html
+++ b/happymothersday.html
@@ -126,7 +126,17 @@ function showSlides() {
 <span style='font-size:30px;'>&#129505;</span>
 <span style='font-size:30px;'>&#128149;</span>  
 <center>
-<h1>Happy Mother's Day Mom</h1><font-family:verdana; font-size:50px; color:#000000>
+<h1>
+<br></br>
+<span style='font-size:30px;'>&#129505;</span>
+<span style='font-size:30px;'>&#128149;</span>   
+<br></br>
+Happy Mother's Day Mom</h1>
+<br></br>
+<span style='font-size:30px;'>&#129505;</span>
+<span style='font-size:30px;'>&#128149;</span> 
+<br></br>
+<font-family:verdana; font-size:50px; color:#000000>
 </center>
 <span style='font-size:30px;'>&#128149;</span>
 <span style='font-size:30px;'>&#129505;</span>
