--- a/happymothersday.html
+++ b/happymothersday.html
@@ -122,8 +122,9 @@ function showSlides() {
 </head>
 <body>
 <br></br>
-<b>
+
 <center>
+<b>
 <h1>
 <br></br>
 <span style='font-size:30px;'>&#129505;</span>
@@ -131,16 +132,18 @@ function showSlides() {
 <br></br>
 <span style='font-size:30px;'>&#129505;</span>
 <span style='font-size:30px;'>&#128149;</span>  
-Happy Mother's Day Mom</h1>
+Happy Mother's Day Mom
 <span style='font-size:30px;'>&#129505;</span>
 <span style='font-size:30px;'>&#128149;</span>  
 <br></br>
 <span style='font-size:30px;'>&#129505;</span>
 <span style='font-size:30px;'>&#128149;</span> 
 <br></br>
-<font-family:verdana; font-size:50px; color:#000000>
-</center>
+</h1>
+<font-family:verdana; font-size:50px; color:#000000></font-family:verdana>
 </b>
+</center>
+
 <audio src="The Intruders - I'll Always Love My Mama (Part 1) (Official Audio).mp3" autoplay muted controls></audio>
 </body>
 </html>
