--- a/happymothersday.html
+++ b/happymothersday.html
@@ -126,7 +126,6 @@ function showSlides() {
 <center>
 <b>
 <h1>
-<br></br>
 <span style='font-size:30px;'>&#129505;</span>
 <span style='font-size:30px;'>&#128149;</span>   
 <br></br>
@@ -137,10 +136,9 @@ Happy Mother's Day Mom
 <span style='font-size:30px;'>&#128149;</span>  
 <br></br>
 <span style='font-size:30px;'>&#129505;</span>
-<span style='font-size:30px;'>&#128149;</span> 
-<br></br>
+<span style='font-size:30px;'>&#128149;</span>
 </h1>
-<font-family:verdana; font-size:50px; color:#000000></font-family:verdana>
+<font-family:verdana; font-size:50px; color:#000000></font-family:cursive>
 </b>
 </center>
 
