--- a/happymothersday.html
+++ b/happymothersday.html
@@ -2,7 +2,7 @@
 <body style="background: linear-gradient(135deg, #ff8099 25%, transparent 25%) -50px 0, linear-gradient(225deg, #ff8099 25%, transparent 25%) -50px 0, linear-gradient(315deg, #ff8099 25%, transparent 25%), linear-gradient(45deg, #ff8099 25%, transparent 25%); background-size: 100px 100px; background-color:#ff5080";></body>
 <style>
 * {box-sizing: border-box;}
-body {font-family: Verdana;}
+body {font-family: cursive;}
 .mySlides {display: none;}
 img {vertical-align: middle;}
 /* Slideshow container */
@@ -51,39 +51,30 @@ img {vertical-align: middle;}
 </style>
 <div class="slideshow-container">
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/B2KdyTWm/FB-IMG-1746942719715.jpg" alt="FB-IMG-1746942719715" border="2"; width=300px; height:300px;>
-  <div class="text"></div>
+  <img src="https://i.ibb.co/B2KdyTWm/FB-IMG-1746942719715.jpg" alt="FB-IMG-1746942719715" border="2";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/zWCghNGT/FB-IMG-1746942873839.jpg" alt="FB-IMG-1746942873839" border="2"; width=300px; height:300px;>
-  <div class="text"></div>
+  <img src="https://i.ibb.co/zWCghNGT/FB-IMG-1746942873839.jpg" alt="FB-IMG-1746942873839" border="2";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/6cLPX6xR/FB-IMG-1746942710791.jpg" alt="FB-IMG-1746942710791" border="2"; width=300px; height:300px;>
-  <div class="text"></div>
+  <img src="https://i.ibb.co/6cLPX6xR/FB-IMG-1746942710791.jpg" alt="FB-IMG-1746942710791" border="2";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/Xr9wqT0S/FB-IMG-1746942748717.jpg" alt="FB-IMG-1746942748717" border="2"; width=300px; height:300px;>
-  <div class="text"></div>
+  <img src="https://i.ibb.co/Xr9wqT0S/FB-IMG-1746942748717.jpg" alt="FB-IMG-1746942748717" border="2";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/v4jpgr7G/FB-IMG-1746943291822-cropped.jpg" alt="FB-IMG-1746943291822-cropped" border="2"; width=300px; height:300px;>
-  <div class="text"></div>
+  <img src="https://i.ibb.co/v4jpgr7G/FB-IMG-1746943291822-cropped.jpg" alt="FB-IMG-1746943291822-cropped" border="2";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/p6bsKrZv/FB-IMG-1746943007290.jpg" alt="FB-IMG-1746943007290" border="2"; width=300px; height:300px;>
-  <div class="text"></div>
+  <img src="https://i.ibb.co/p6bsKrZv/FB-IMG-1746943007290.jpg" alt="FB-IMG-1746943007290" border="2">
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/yngggpNz/FB-IMG-1746942996618.jpg" alt="FB-IMG-1746942996618" border="2"; width=300px; height:300px;>
-  <div class="text"></div>
+  <img src="https://i.ibb.co/yngggpNz/FB-IMG-1746942996618.jpg" alt="FB-IMG-1746942996618" border="2";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/Hfv5VPFD/FB-IMG-1746943268866.jpg" alt="FB-IMG-1746943268866" border="2"; width=300px; height:300px;>
-  <div class="text"></div>
+  <img src="https://i.ibb.co/Hfv5VPFD/FB-IMG-1746943268866.jpg" alt="FB-IMG-1746943268866" border="2">
 <div class="mySlides fade">
- <img src="https://i.ibb.co/4ZP8nNGJ/463601992-10212270326710410-1251689602173422209-n.jpg" alt="463601992-10212270326710410-1251689602173422209-n" border="2"; width=300px; height:300px;>
-  <div class="text"></div>
+ <img src="https://i.ibb.co/4ZP8nNGJ/463601992-10212270326710410-1251689602173422209-n.jpg" alt="463601992-10212270326710410-1251689602173422209-n" border="2";>
 </div>
 </div>
 <br>
@@ -122,7 +113,6 @@ function showSlides() {
 </head>
 <body>
 <br></br>
-
 <center>
 <b>
 <h1>
@@ -139,7 +129,7 @@ Happy Mother's Day Mom
 </h1>
 </b>
 </center>
-
+<br></br>
 <audio src="The Intruders - I'll Always Love My Mama (Part 1) (Official Audio).mp3" autoplay muted controls></audio>
 </body>
 </html>
