--- a/happymothersday.html
+++ b/happymothersday.html
@@ -74,7 +74,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <img src="https://i.ibb.co/Hfv5VPFD/FB-IMG-1746943268866.jpg" alt="FB-IMG-1746943268866" border="2">
 <div class="mySlides fade">
- <img src="https://i.ibb.co/4ZP8nNGJ/463601992-10212270326710410-1251689602173422209-n.jpg" alt="463601992-10212270326710410-1251689602173422209-n" border="2";>
+<img src="https://i.ibb.co/3yS7wVS5/weddingfamilypic.jpg" alt="weddingfamilypic" border="2">
 </div>
 </div>
 <br>
