--- a/happymothersday.html
+++ b/happymothersday.html
@@ -111,6 +111,7 @@ function showSlides() {
 </script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<center>
 <body>
 <br></br>
 <center>
@@ -132,6 +133,7 @@ Happy Mother's Day Mom
 <br></br>
 <audio src="The Intruders - I'll Always Love My Mama (Part 1) (Official Audio).mp3" autoplay muted controls></audio>
 </body>
+</center>
 </html>
 </body>
 </html> 
