--- a/happymothersday.html
+++ b/happymothersday.html
@@ -126,7 +126,7 @@ Happy Mother's Day Mom
 <span style='font-size:30px;'>&#129505;</span>
 <span style='font-size:30px;'>&#128149;</span>
 <span style='font-size:30px;'>&#129505;</span>
-<font-family:serif; font-size:50px; color:#000000></font-family:serif>
+<font-family:timesnewroman; font-size:50px; color:#000000></font-family:timesnewroman>
 </h1>
 </b>
 </center>
