--- a/happymothersday.html
+++ b/happymothersday.html
@@ -111,12 +111,11 @@ function showSlides() {
 </script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<center>
 <body>
 <br></br>
 <center>
 <b>
-<h1>
+<center><h1>
 <span style='font-size:30px;'>&#129505;</span>
 <span style='font-size:30px;'>&#128149;</span>   
 <span style='font-size:30px;'>&#129505;</span>
@@ -128,8 +127,8 @@ Happy Mother's Day Mom
 <span style='font-size:30px;'>&#129505;</span>
 <font-family:timesnewroman; font-size:50px; color:#000000></font-family:timesnewroman>
 </h1>
-</b>
 </center>
+</b>
 <br></br>
 <audio src="The Intruders - I'll Always Love My Mama (Part 1) (Official Audio).mp3" autoplay muted controls></audio>
 </body>
