--- a/happymothersday.html
+++ b/happymothersday.html
@@ -51,30 +51,30 @@ img {vertical-align: middle;}
 </style>
 <div class="slideshow-container">
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/B2KdyTWm/FB-IMG-1746942719715.jpg" alt="FB-IMG-1746942719715" border="2";>
+  <img src="https://i.ibb.co/B2KdyTWm/FB-IMG-1746942719715.jpg" alt="FB-IMG-1746942719715" border="2"; width="300px"; height="300px";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/zWCghNGT/FB-IMG-1746942873839.jpg" alt="FB-IMG-1746942873839" border="2";>
+  <img src="https://i.ibb.co/zWCghNGT/FB-IMG-1746942873839.jpg" alt="FB-IMG-1746942873839" border="2"; width="300px"; height="300px";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/6cLPX6xR/FB-IMG-1746942710791.jpg" alt="FB-IMG-1746942710791" border="2";>
+  <img src="https://i.ibb.co/6cLPX6xR/FB-IMG-1746942710791.jpg" alt="FB-IMG-1746942710791" border="2"; width="300px"; height="300px";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/Xr9wqT0S/FB-IMG-1746942748717.jpg" alt="FB-IMG-1746942748717" border="2";>
+  <img src="https://i.ibb.co/Xr9wqT0S/FB-IMG-1746942748717.jpg" alt="FB-IMG-1746942748717" border="2"; width="300px"; height="300px";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/v4jpgr7G/FB-IMG-1746943291822-cropped.jpg" alt="FB-IMG-1746943291822-cropped" border="2";>
+  <img src="https://i.ibb.co/v4jpgr7G/FB-IMG-1746943291822-cropped.jpg" alt="FB-IMG-1746943291822-cropped" border="2"; width="300px"; height="300px";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/p6bsKrZv/FB-IMG-1746943007290.jpg" alt="FB-IMG-1746943007290" border="2">
+  <img src="https://i.ibb.co/p6bsKrZv/FB-IMG-1746943007290.jpg" alt="FB-IMG-1746943007290" border="2" width="300px"; height="300px";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/yngggpNz/FB-IMG-1746942996618.jpg" alt="FB-IMG-1746942996618" border="2";>
+  <img src="https://i.ibb.co/yngggpNz/FB-IMG-1746942996618.jpg" alt="FB-IMG-1746942996618" border="2"; width="300px"; height="300px";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/Hfv5VPFD/FB-IMG-1746943268866.jpg" alt="FB-IMG-1746943268866" border="2">
+  <img src="https://i.ibb.co/Hfv5VPFD/FB-IMG-1746943268866.jpg" alt="FB-IMG-1746943268866" border="2" width="300px"; height="300px";>
 <div class="mySlides fade">
-<img src="https://i.ibb.co/3yS7wVS5/weddingfamilypic.jpg" alt="weddingfamilypic" border="2">
+<img src="https://i.ibb.co/3yS7wVS5/weddingfamilypic.jpg" alt="weddingfamilypic" border="2" width="300px"; height="300px";>
 </div>
 </div>
 <br>
