--- a/happymothersday.html
+++ b/happymothersday.html
@@ -69,10 +69,11 @@ img {vertical-align: middle;}
   <img src="https://i.ibb.co/p6bsKrZv/FB-IMG-1746943007290.jpg" alt="FB-IMG-1746943007290" border="2" width="300px"; height="300px";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/yngggpNz/FB-IMG-1746942996618.jpg" alt="FB-IMG-1746942996618" border="2"; width="300px"; height="300px";>
+<img src="https://i.ibb.co/yngggpNz/FB-IMG-1746942996618.jpg" alt="FB-IMG-1746942996618" border="2"; width="300px"; height="300px";>
 </div>
 <div class="mySlides fade">
-  <img src="https://i.ibb.co/Hfv5VPFD/FB-IMG-1746943268866.jpg" alt="FB-IMG-1746943268866" border="2" width="200px"; height="300px";>
+<img src="https://i.ibb.co/Hfv5VPFD/FB-IMG-1746943268866.jpg" alt="FB-IMG-1746943268866" border="2" width="200px"; height="300px";>
+</div>div>
 <div class="mySlides fade">
 <img src="https://i.ibb.co/3yS7wVS5/weddingfamilypic.jpg" alt="weddingfamilypic" border="2" width="300px"; height="300px";>
 </div>
