--- a/happymothersday.html
+++ b/happymothersday.html
@@ -116,16 +116,14 @@ function showSlides() {
 <center>
 <b>
 <center><h1>
-<span style='font-size:30px;'>&#129505;</span>
-<span style='font-size:30px;'>&#128149;</span>   
-<span style='font-size:30px;'>&#129505;</span>
-<span style='font-size:30px;'>&#128149;</span>  
+<span style='font-size:30px;'>&#128153;</span> 
+<span style='font-size:30px;'>&#129505;</span>   
+<span style='font-size:30px;'>&#128153;</span>  
 Happy Mother's Day Mom
-<span style='font-size:30px;'>&#128149;</span> 
-<span style='font-size:30px;'>&#129505;</span>
-<span style='font-size:30px;'>&#128149;</span>
-<span style='font-size:30px;'>&#129505;</span>
-<font-family:timesnewroman; font-size:50px; color:#000000></font-family:timesnewroman>
+<span style='font-size:30px;'>&#128153;</span> 
+<span style='font-size:30px;'>&#129505;</span>   
+<span style='font-size:30px;'>&#128153;</span>
+<font-family:cursive; font-size:50px; color:#000000></font-family:cursive>
 </h1>
 </center>
 </b>
