--- a/happymothersday.html
+++ b/happymothersday.html
@@ -49,6 +49,7 @@ img {vertical-align: middle;}
   .text {font-size: 11px}
 }
 </style>
+<center>
 <div class="slideshow-container">
 <div class="mySlides fade">
   <img src="https://i.ibb.co/B2KdyTWm/FB-IMG-1746942719715.jpg" alt="FB-IMG-1746942719715" border="2"; width="300px"; height="300px";>
@@ -77,6 +78,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
 <img src="https://i.ibb.co/3yS7wVS5/weddingfamilypic.jpg" alt="weddingfamilypic" border="2" width="300px"; height="300px";>
 </div>
+</center>
 <br>
 <div style="text-align:center">
   <span class="dot"></span> 
@@ -89,6 +91,7 @@ img {vertical-align: middle;}
   <span class="dot"></span> 
   <span class="dot"></span> 
 </div>
+</br>
 <script>
 let slideIndex = 0;
 showSlides();
