--- a/happymothersday.html
+++ b/happymothersday.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html> 
-<body style="background: linear-gradient(135deg, #ff8099 25%, transparent 25%) -50px 0, linear-gradient(225deg, #ff8099 25%, transparent 25%) -50px 0, linear-gradient(315deg, #ff8099 25%, transparent 25%), linear-gradient(45deg, #ff8099 25%, transparent 25%); background-size: 100px 100px; background-color:#ff5080";></body>
-<style>
+<body style="background:
+      radial-gradient(at 80% 80%,#ff3050 25.4%,#0000 26%),
+      radial-gradient(at 20% 80%,#ff3050 25.4%,#0000 26%),
+      conic-gradient(from -45deg at 50% 41%,#ff3050 90deg,#ff8099 0) 
+        50px 0; background-size: 6.25em 6.25em;">
+</body>
 * {box-sizing: border-box;}
 body {font-family: cursive;}
 .mySlides {display: none;}
