--- a/happymothersday.html
+++ b/happymothersday.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html> 
 <body style="background:
-      radial-gradient(at 80% 80%,#5080ff 25.4%,#0000 26%),
-      radial-gradient(at 20% 80%,#5080ff 25.4%,#0000 26%),
-      conic-gradient(from -45deg at 50% 41%,#5080ff 90deg,#ff8099 0) 
+      radial-gradient(at 80% 80%,#8080ff 25.4%,#0000 26%),
+      radial-gradient(at 20% 80%,#8080ff 25.4%,#0000 26%),
+      conic-gradient(from -45deg at 50% 41%,#8080ff 90deg,#ff8099 0) 
         50px 0; background-size: 6.25em 6.25em;">
+</body>
+<style>
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 300px;
+  max-height: 300px;
+  position: relative;
+  margin: auto;
+}
 /* Fading animation */
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
 }
+
 @keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .4}
   to {opacity: 1}
 }
+
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 800px) and (max-height: 800px) {
+@media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
-</body>
-
 </style>
 <center>
 <div class="slideshow-container">
@@ -96,7 +110,7 @@ Happy Mother's Day Mom
 <span style='font-size:30px;'>&#128153;</span> 
 <span style='font-size:30px;'>&#129505;</span>   
 <span style='font-size:30px;'>&#128153;</span>
-<font-family:cursive; font-size:50px; color:#000000></font-family:cursive>
+<font-family:Verdana; font-size:50px; color:#000000></font-family:Verdana;>
 </h1>
 </center>
 </b>
