--- a/happymothersday.html
+++ b/happymothersday.html
@@ -5,6 +5,7 @@
       conic-gradient(from -45deg at 50% 41%,#8080ff 90deg,#ff8099 0) 
         50px 0; background-size: 6.25em 6.25em;">
 </body>
+<center>
 <style>
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
@@ -34,6 +35,7 @@ img {vertical-align: middle;}
   .text {font-size: 11px}
 }
 </style>
+</center>
 <center>
 <div class="slideshow-container">
 <div class="mySlides fade">
@@ -84,11 +86,12 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 6000); //
+  setTimeout(showSlides, 3000); //
 }
 </script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<br></br>
 <br></br>
 <body>
 <center>
