--- a/happymothersday.html
+++ b/happymothersday.html
@@ -8,10 +8,9 @@
 <center>
 <style>
 * {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
+body {font-family: Verdana;}
 .mySlides {display: none;}
 img {vertical-align: middle;}
-
 /* Slideshow container */
 .slideshow-container {
   max-width: 300px;
@@ -19,17 +18,25 @@ img {vertical-align: middle;}
   position: relative;
   margin: auto;
 }
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
 /* Fading animation */
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
 }
-
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
