--- a/happymothersday.html
+++ b/happymothersday.html
@@ -8,9 +8,10 @@
 <center>
 <style>
 * {box-sizing: border-box;}
-body {font-family: Verdana;}
+body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
 img {vertical-align: middle;}
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 300px;
@@ -18,15 +19,18 @@ img {vertical-align: middle;}
   position: relative;
   margin: auto;
 }
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active {
+  background-color: #717171;
 }
 /* Fading animation */
 .fade {
