--- a/happymothersday.html
+++ b/happymothersday.html
@@ -105,6 +105,17 @@ img {vertical-align: middle;}
 <br>
 </div>
 </br>
+<div style="text-align:center">
+<span class="dot"></span>
+<span class="dot"></span>
+<span class="dot"></span>
+<span class="dot"></span>
+<span class="dot"></span>
+<span class="dot"></span>
+<span class="dot"></span>
+<span class="dot"></span>
+<span class="dot"></span>
+</div>
 <script>
 let slideIndex = 0;
 showSlides();
