--- a/happymothersday.html
+++ b/happymothersday.html
@@ -107,6 +107,7 @@ img {vertical-align: middle;}
 </br>
 <br></br>
 <br></br>
+<center>
 <div style="text-align:center">
 <span class="dot"></span>
 <span class="dot"></span>
@@ -117,6 +118,7 @@ img {vertical-align: middle;}
 <span class="dot"></span>
 <span class="dot"></span>
 <span class="dot"></span>
+</center>
 </div>
 <script>
 let slideIndex = 0;
@@ -140,7 +142,6 @@ function showSlides() {
 </script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<br></br>
 <br></br>
 <body>
 <center>
